--- a/app/views/questions/_question.html.erb
+++ b/app/views/questions/_question.html.erb
@@ -1,7 +1,8 @@
   <% table_row_tag do %>
     <td><%=h question.name %></td>
     <td><%=h question.content %></td>
-    <td><%=h question.global %></td>
+    <td><%= Question::DISPOSITIONS.index( question.disposition ) %></td>
+    <td><%= question.global? ? 'Yes' : 'No' %></td>
     <td><%= link_to 'Show', question %></td>
     <td><%= link_to( 'Edit', edit_question_path(question) ) if permitted_to? :edit, question %></td>
     <td><%= link_to( 'Destroy', question, :confirm => 'Are you sure?', :method => :delete ) if permitted_to? :destroy, question %></td>
