--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -5,7 +5,8 @@
   <tr>
     <th>Name</th>
     <th>Content</th>
-    <th>Global</th>
+    <th>Disposition</th>
+    <th>Global?</th>
   </tr>
   </thead>
 
