--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -3,31 +3,33 @@
 </p>
 
 <p>
-  <b>Format:</b> <%=h Question::ALLOWED_FORMATS.invert[@question.format] %>
+  <b>Disposition:</b> <%= Question::DISPOSITIONS.index( @question.disposition ) %>
 </p>
 
 <p>
   <b>Content:</b>
 </p>
+
 <%=markdown @question.content %>
 
 <p>
-  <b>Global?</b> <%= @question.global ? 'Yes' : 'No' %>
+  <b>Global?</b> <%= @question.global? ? 'Yes' : 'No' %>
 </p>
 
-<% if @question.quizzes.length > 0 %>
+<% if @question.quizzes.length > 0 -%>
 <h3>Quizzes</h3>
+
 <ul>
-<% @question.quizzes.each do |quiz| %>
+<% @question.quizzes.each do |quiz| -%>
 <li><%= link_to h(quiz), quiz %></li>
-<% end %>
+<% end -%>
 </ul>
-<% end %>
+<% end -%>
 
 <p>
-<% if permitted_to? :edit, @question %>
+<% if permitted_to? :edit, @question -%>
 <%= link_to 'Edit', edit_question_path(@question) %> |
-<% end %>
+<% end -%>
 <%= link_to 'Back', questions_path %>
 </p>
 
