--- a/app/views/memberships/index.html.erb
+++ b/app/views/memberships/index.html.erb
@@ -42,7 +42,8 @@
 <%= will_paginate @memberships %>
 
 <%= render :partial => 'memberships', :object => @memberships,
-  :locals => { :committee => @committee, :user => @user, :position => @position } %>
+  :locals => { :committee => @committee, :user => @user, :position => @position,
+  :request => @request } %>
 
 <%= will_paginate @memberships %>
 
