Fix a number of issues so all tests pass.

--- a/app/views/committees/index.html.erb
+++ b/app/views/committees/index.html.erb
@@ -10,7 +10,7 @@
 
 <%= will_paginate @committees %>
 
-<%= render :partial => "committees", :object => @committees,
+<%= render :partial => "committees/committees", :object => @committees,
 :locals => { :user => ( @user ? @user : false ) } %>
 
 <%= will_paginate @committees %>
