--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -3,7 +3,7 @@
 </p>
 
 <p>
-  <b>Disposition:</b> <%= Question::DISPOSITIONS.index( @question.disposition ) %>
+  <b>Disposition:</b> <%= Question::DISPOSITIONS.key( @question.disposition ) %>
 </p>
 
 <p>
