Add database components for join and leave notices.  Add flag to indicate whether a position may be requested through a committee.

--- a/app/views/positions/_form.html.erb
+++ b/app/views/positions/_form.html.erb
@@ -5,8 +5,14 @@
   <%= form.input :quiz %>
   <%= form.input :schedule %>
   <%= form.input :slots %>
-  <%= form.input :requestable, :as => :radio, :label => 'Requestable?' %>
-  <%= form.input :renewable, :as => :radio, :label => 'Renewable?' %>
+  <%= form.input :requestable, :as => :radio, :label => 'Requestable?',
+    :hint => 'Can the position be requested directly?' %>
+  <%= form.input :requestable_by_committee, :as => :radio, :label => 'Requestable by committee?',
+    :hint => 'Can the position be staffed via requests for membership in associated committees?' %>
+  <%= form.input :renewable, :as => :radio, :label => 'Renewable?',
+    :hint => 'Should members receive renewal notices regarding this position?' %>
+  <%= form.input :notifiable, :as => :radio, :label => 'Notifiable?',
+    :hint => 'Should notices be sent when a membership is created/assigned and when it expires?' %>
   <%= form.input :statuses, :as => :check_boxes, :collection => User::STATUSES,
     :hint => 'What status must a user have to be in this position?  Leave blank if status is not a factor.' %>
   <%= form.input :join_message %>
