--- a/app/views/memberships/show.html.erb
+++ b/app/views/memberships/show.html.erb
@@ -18,6 +18,20 @@
   <b>Ends at:</b> <%=h @membership.ends_at.to_s(:rfc822) %>
 </p>
 
+<% if @membership.join_notice_sent_at? %>
+<p>
+  <b>Join notice sent at:</b> <%=h @membership.join_notice_sent_at.to_formatted_s( :long_ordinal ) %>
+</p>
+
+<% end %>
+
+<% if @membership.leave_notice_sent_at? %>
+<p>
+  <b>Leave notice sent at:</b> <%=h @membership.leave_notice_sent_at.to_formatted_s( :long_ordinal ) %>
+</p>
+
+<% end %>
+
 <% @membership.designees.each do |designee| %>
 <p>
   <b>Designee for <%=h designee.committee.name %>:</b> <%=h designee.user.name %>
