Update tests and scenarios for authorities, committees controllers.

--- a/app/views/committees/show.html.erb
+++ b/app/views/committees/show.html.erb
@@ -3,6 +3,10 @@
 </p>
 
 <p>
+  <b>Schedule:</b> <%=h @committee.schedule %>
+</p>
+
+<p>
   <b>Requestable?</b> <%= @committee.requestable? ? 'Yes' : 'No' %>
 </p>
 
