--- a/app/views/qualifications/show.html.erb
+++ b/app/views/qualifications/show.html.erb
@@ -8,7 +8,9 @@
 </p>
 
 <p>
+<% if permitted_to? :edit, @qualification %>
 <%= link_to 'Edit', edit_qualification_path(@qualification) %> |
+<% end %>
 <%= link_to 'Back', qualifications_path %>
 </p>
 
