--- a/app/views/requests/_request.html.erb
+++ b/app/views/requests/_request.html.erb
@@ -10,5 +10,14 @@
     <td><%= link_to 'Show', request %></td>
     <td><%= link_to( 'Edit', edit_request_path(request) ) if permitted_to? :edit, request %></td>
     <td><%= link_to( 'Destroy', request, :confirm => 'Are you sure?', :method => :delete ) if permitted_to? :destroy, request %></td>
+    <td>
+      <% if permitted_to? :reject, request %>
+        <% if request.rejected? %>
+          <%= link_to 'Unreject', unreject_request_path( request ), :confirm => 'Are you sure?', :method => :put %>
+        <% else %>
+          <%= link_to 'Reject', reject_request_path( request ) %>
+        <% end %>
+      <% end %>
+    </td>
   <% end %>
 
