--- a/app/views/authorities/show.html.erb
+++ b/app/views/authorities/show.html.erb
@@ -19,7 +19,7 @@
 <%= link_to 'Edit', edit_authority_path(@authority) %> |
 <% end -%>
 <%= nested_index @authority, 'memberships', %w( past current future ) %> |
-<%= nested_index @authority, 'requests', %w( expired unexpired ) %> |
+<%= nested_index @authority, 'requests', %w( expired unexpired active rejected ) %> |
 <%= link_to 'Back', authorities_path %>
 </p>
 
