Change profile to utilize new active and rejected distinction amongst membership requests.

--- a/app/views/users/profile.html.erb
+++ b/app/views/users/profile.html.erb
@@ -15,7 +15,8 @@ You may review requests and update memberships for the following authorities:
 <% current_user.authorities.each do |authority| %>
 <li>
 <%= link_to h( authority ), authority %>
-(<%= link_to 'unexpired requests', unexpired_authority_requests_path( authority ) %>)
+(<%= link_to 'active requests', active_authority_requests_path( authority ) %>)
+(<%= link_to 'rejected requests', rejected_authority_requests_path( authority ) %>)
 (<%= link_to 'current memberships', current_authority_memberships_path( authority ) %>)
 </li>
 <% end %>
