Initial implementation of rejection notices.  Needs functional tests for notices.

--- a/app/views/authorities/_form.html.erb
+++ b/app/views/authorities/_form.html.erb
@@ -6,6 +6,7 @@
   }, :hint => "Specify the committee, if any, whose members should be able to read and comment on requests under this authority." ) %>
   <%= form.input :join_message %>
   <%= form.input :leave_message %>
+  <%= form.input :reject_message %>
   <% end %>
   <%= form.buttons %>
 
