--- a/app/views/committees/_form.html.erb
+++ b/app/views/committees/_form.html.erb
@@ -5,6 +5,7 @@
   <%= form.input :requestable, :as => :radio, :label => 'Requestable?' %>
   <%= form.input :join_message %>
   <%= form.input :leave_message %>
+  <%= form.input :reject_message %>
   <% end %>
   <%= form.buttons %>
 
