--- a/app/views/positions/_form.html.erb
+++ b/app/views/positions/_form.html.erb
@@ -17,6 +17,7 @@
     :hint => 'What status must a user have to be in this position?  Leave blank if status is not a factor.' %>
   <%= form.input :join_message %>
   <%= form.input :leave_message %>
+  <%= form.input :reject_message %>
   <% end %>
   <%= form.buttons %>
 
