--- a/app/views/authorities/show.html.erb
+++ b/app/views/authorities/show.html.erb
@@ -14,6 +14,10 @@
 
 <%=markdown @authority.leave_message %>
 
+<p><b>Reject message:</b></p>
+
+<%=markdown @authority.reject_message %>
+
 <p>
 <% if permitted_to? :edit, @authority -%>
 <%= link_to 'Edit', edit_authority_path(@authority) %> |
