--- a/app/views/requests/reject.html.erb
+++ b/app/views/requests/reject.html.erb
@@ -2,6 +2,9 @@
 
 <% semantic_form_for(:request, @request, :url => do_reject_request_path(@request), :html => { :method => :put } ) do |form| %>
   <% form.inputs do %>
+    <%= form.input :rejected_by_authority, :as => :select, :label => 'Authority',
+      :hint => 'Under which authority should rejection be made?',
+      :collection => ( current_user.allowed_authorities & @request.authorities ) %>
     <%= form.input :rejection_comment, :as => :text,
       :hint => 'Provide a brief explanation for rejection of the request to share with the requestor.' %>
   <% end %>
