Complete fixes for deprecated functions according to rails upgrade plugin.

--- a/app/views/committees/edit.html.erb
+++ b/app/views/committees/edit.html.erb
@@ -1,6 +1,6 @@
 <h2>Editing committee</h2>
 
-<% semantic_form_for(@committee) do |f| %>
+<%= semantic_form_for(@committee) do |f| %>
   <%= render :partial => 'form', :object => f %>
 <% end %>
 
