--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -80,7 +80,7 @@
 </div> <!-- id=wrap -->
 <div id="footer">
 <div id="footer-content">
-&copy; 2008-2010 Office of the Assemblies, Cornell University.
+&copy; 2008-<%= Time.zone.today.year %> Office of the Assemblies, Cornell University.
 We use <a href="http://www.fsf.org/">free software</a>.
 Questions? Contact
 <a href="mailto:assembly@cornell.edu">assembly@cornell.edu</a>.
