--- a/app/views/motions/new.html.erb
+++ b/app/views/motions/new.html.erb
@@ -1,6 +1,6 @@
 <h2>New motion for <%=h @motion.committee %></h2>
 
-<% semantic_form_for(:motion, @motion, :url => committee_motions_path(@motion.committee) ) do |f| %>
+<%= semantic_form_for(:motion, @motion, :url => committee_motions_path(@motion.committee) ) do |f| %>
   <%= render :partial => 'form', :object => f %>
 <% end %>
 
