--- a/app/views/qualifications/edit.html.erb
+++ b/app/views/qualifications/edit.html.erb
@@ -1,6 +1,6 @@
 <h2>Editing qualification</h2>
 
-<% semantic_form_for(@qualification) do |f| %>
+<%= semantic_form_for(@qualification) do |f| %>
   <%= render :partial => 'form', :object => f %>
 <% end %>
 
