--- a/app/views/questions/edit.html.erb
+++ b/app/views/questions/edit.html.erb
@@ -1,6 +1,6 @@
 <h2>Editing question</h2>
 
-<% semantic_form_for(@question) do |f| %>
+<%= semantic_form_for(@question) do |f| %>
   <%= render :partial => 'form', :object => f %>
 <% end %>
 
