--- a/app/views/quizzes/new.html.erb
+++ b/app/views/quizzes/new.html.erb
@@ -1,6 +1,6 @@
 <h2>New quiz</h2>
 
-<% semantic_form_for(@quiz) do |f| %>
+<%= semantic_form_for(@quiz) do |f| %>
   <%= render :partial => 'form', :object => f %>
 <% end %>
 
