--- a/app/views/schedules/new.html.erb
+++ b/app/views/schedules/new.html.erb
@@ -1,9 +1,7 @@
 <h2>New schedule</h2>
 
-<% semantic_form_for(@schedule) do |f| %>
-
+<%= semantic_form_for(@schedule) do |f| %>
   <%= render :partial => 'form', :object => f %>
-
 <% end %>
 
 <p>
