--- a/app/views/user_renewal_notices/edit.html.erb
+++ b/app/views/user_renewal_notices/edit.html.erb
@@ -1,6 +1,6 @@
 <h1>Editing user renewal notice</h1>
 
-<% semantic_form_for(@user_renewal_notice) do |f| %>
+<%= semantic_form_for(@user_renewal_notice) do |f| %>
 <%= render :partial => 'form', :object => f %>
 <% end %>
 
