--- a/app/views/user_renewal_notices/new.html.erb
+++ b/app/views/user_renewal_notices/new.html.erb
@@ -1,6 +1,6 @@
 <h2>New user renewal notice</h2>
 
-<% semantic_form_for(@user_renewal_notice) do |f| %>
+<%= semantic_form_for(@user_renewal_notice) do |f| %>
 <%= render :partial => 'form', :object => f %>
 <% end %>
 
