--- a/app/views/authorities/new.html.erb
+++ b/app/views/authorities/new.html.erb
@@ -1,6 +1,6 @@
 <h2>New authority</h2>
 
-<% semantic_form_for(@authority) do |f| %>
+<%= semantic_form_for(@authority) do |f| %>
 
   <%= render :partial => 'form', :object => f %>
 
