--- a/app/views/enrollments/edit.html.erb
+++ b/app/views/enrollments/edit.html.erb
@@ -1,6 +1,6 @@
 <h2>Editing enrollment for <%=h @enrollment.committee %></h2>
 
-<% semantic_form_for(@enrollment) do |f| %>
+<%= semantic_form_for(@enrollment) do |f| %>
   <%= render :partial => 'form', :object => f %>
 <% end %>
 
