--- a/app/views/periods/edit.html.erb
+++ b/app/views/periods/edit.html.erb
@@ -1,6 +1,6 @@
 <h2>Editing period for <%=h @period.schedule %></h2>
 
-<% semantic_form_for(@period) do |f| %>
+<%= semantic_form_for(@period) do |f| %>
   <%= render :partial => 'form', :object => f %>
 <% end %>
 
