--- a/app/views/positions/index.html.erb
+++ b/app/views/positions/index.html.erb
@@ -1,6 +1,6 @@
 <h2>Listing positions<%=h @committee ? " for #{@committee}" : "" %></h2>
 
-<% semantic_form_for @search do |form| %>
+<%= semantic_form_for @search do |form| %>
 <p>
   <%= form.label :name_like, 'Name' %>
   <%= form.text_field :name_like %>
