--- a/app/views/requests/edit.html.erb
+++ b/app/views/requests/edit.html.erb
@@ -1,6 +1,6 @@
 <h2>Editing request of <%=h @request.user.name %> for <%=h @request.requestable %></h2>
 
-<% semantic_form_for(@request, :html => { :multipart => true }) do |f| %>
+<%= semantic_form_for(@request, :html => { :multipart => true }) do |f| %>
   <%= render :partial => 'form', :object => f %>
 <% end %>
 
