--- a/app/views/committees/_form.html.erb
+++ b/app/views/committees/_form.html.erb
@@ -1,4 +1,4 @@
-  <%= form.error_messages %>
+  <%= render "shared/error_messages", :target => form.object %>
   <% form.inputs do %>
   <%= form.input :name %>
   <%= form.input :schedule, :hint => 'On what schedule are sessions of the committee organized?' %>
