--- a/app/views/memberships/_form.html.erb
+++ b/app/views/memberships/_form.html.erb
@@ -1,4 +1,4 @@
-  <%= form.error_messages %>
+  <%= render "shared/error_messages", :target => form.object %>
   <%= form.inputs do %>
   <%= form.input( :user_name, :label => 'User', :as => :string_with_auto_complete, :remote => {
     :url => users_path(:format => :js), :method => :get, :with => "'search[name_like]=' + element.value"
