--- a/app/views/motions/_form.html.erb
+++ b/app/views/motions/_form.html.erb
@@ -1,4 +1,4 @@
-  <%= form.error_messages %>
+  <%= render "shared/error_messages", :target => form.object %>
   <% form.inputs do %>
     <%= form.input :name, :hint => 'Name of the motion' %>
     <%= form.input :description, :hint => 'Briefly describe purpose and effect of motion' %>
