--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -1,4 +1,4 @@
-  <%= form.error_messages %>
+  <%= render "shared/error_messages", :target => form.object %>
   <% form.inputs do %>
   <%= form.input :name %>
   <%= form.input :disposition, :as => :select, :collection => Question::DISPOSITIONS,
