--- a/app/views/requests/_form.html.erb
+++ b/app/views/requests/_form.html.erb
@@ -1,4 +1,4 @@
-  <%= form.error_messages %>
+  <%= render "shared/error_messages", :target => form.object %>
   <%= form.inputs do %>
     <% if form.object.new_record? -%>
     <%= form.input :user_id, :as => :hidden %>
