--- a/app/views/user_renewal_notices/_form.html.erb
+++ b/app/views/user_renewal_notices/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form.error_messages %>
+  <%= render "shared/error_messages", :target => form.object %>
 <% form.inputs do %>
 <%= form.input :starts_at, :hint => 'After when should the memberships should start?', :as => :ft_calendar_date_select %>
 <%= form.input :ends_at, :hint => 'After when should the memberships end?', :as => :ft_calendar_date_select %>
