--- a/app/views/authorities/edit.html.erb
+++ b/app/views/authorities/edit.html.erb
@@ -1,9 +1,7 @@
 <h2>Editing authority</h2>
 
-<%= semantic_form_for(@authority) do |f| %>
-
+<%= semantic_form_for @authority do |f| %>
   <%= render :partial => 'form', :object => f %>
-
 <% end %>
 
 <p>
