--- a/app/views/memberships/_form.html.erb
+++ b/app/views/memberships/_form.html.erb
@@ -1,8 +1,6 @@
   <%= render "shared/error_messages", :target => form.object %>
   <%= form.inputs do %>
-  <%= form.input( :user_name, :label => 'User', :as => :string_with_auto_complete, :remote => {
-    :url => users_path(:format => :js), :method => :get, :with => "'search[name_like]=' + element.value"
-  } ) %>
+  <%= form.input :user_name, :label => 'User', :as => :string %>
   <%= form.input :period, :collection => form.object.position.schedule.periods %>
   <%= form.input :starts_at, :as => :ft_calendar_date_select %>
   <%= form.input :ends_at, :as => :ft_calendar_date_select %>
@@ -11,8 +9,7 @@
         <% designee_form.inputs do %>
           <%= designee_form.input :committee_id, :as => :hidden %>
           <%= designee_form.input :user_name, :label => "Designee for #{designee_form.object.committee.name}",
-              :as => :string_with_auto_complete, :remote => { :url => users_path(:format => :js),
-              :method => :get, :with => "'search[name_like]=' + element.value", :skip_style => true } %>
+              :as => :string %>
           <%= designee_form.input :_destroy, :label => "Check to remove this designee", :as => :boolean %>
         <% end %>
       <% end %>
