--- a/app/views/periods/_form.html.erb
+++ b/app/views/periods/_form.html.erb
@@ -1,7 +1,7 @@
   <%= render "shared/error_messages", :target => form.object %>
   <% form.inputs do %>
-  <%= form.input :starts_at, :as => :ft_calendar_date_select %>
-  <%= form.input :ends_at, :as => :ft_calendar_date_select %>
+  <%= form.input :starts_at, :as => :string %>
+  <%= form.input :ends_at, :as => :string %>
   <% end %>
   <%= form.buttons %>
 
