First pass at fixing deprecated block syntax

--- a/app/views/enrollments/_enrollment.html.erb
+++ b/app/views/enrollments/_enrollment.html.erb
@@ -1,4 +1,4 @@
-  <% table_row_tag do %>
+  <%= table_row_tag do %>
     <% unless committee %>
     <td><%=h enrollment.committee %></td>
     <% end %>
