--- a/app/views/user_renewal_notices/_notice.html.erb
+++ b/app/views/user_renewal_notices/_notice.html.erb
@@ -1,4 +1,4 @@
-<% table_row_tag do %>
+<%= table_row_tag do %>
     <td><%=h notice.starts_at.to_s :rfc822 %></td>
     <td><%=h notice.ends_at.to_s :rfc822 %></td>
     <td><%=h notice.deadline.to_s :rfc822 %></td>
