--- a/app/views/committees/_committee.html.erb
+++ b/app/views/committees/_committee.html.erb
@@ -1,4 +1,4 @@
-  <% table_row_tag do %>
+  <%= table_row_tag do %>
     <td><%=h committee.name %></td>
     <% if user -%>
     <td><%= link_to 'Request', new_committee_request_path(committee, :user_id => user.id) %></td>
