--- a/app/views/qualifications/_qualification.html.erb
+++ b/app/views/qualifications/_qualification.html.erb
@@ -1,4 +1,4 @@
-  <% table_row_tag do %>
+  <%= table_row_tag do %>
     <td><%=h qualification.name %></td>
     <td><%=h qualification.description %></td>
     <td><%= link_to 'Show', qualification %></td>
