--- a/app/views/schedules/_schedule.html.erb
+++ b/app/views/schedules/_schedule.html.erb
@@ -1,4 +1,4 @@
-  <% table_row_tag do %>
+  <%= table_row_tag do %>
     <td><%=h schedule.name %></td>
     <td><%= link_to 'Show', schedule %></td>
     <td><%= link_to( 'Edit', edit_schedule_path(schedule) ) if permitted_to? :edit, schedule %></td>
