--- a/app/views/memberships/_form.html.erb
+++ b/app/views/memberships/_form.html.erb
@@ -2,11 +2,11 @@
   <%= form.inputs do %>
   <%= form.input :user_name, :label => 'User', :as => :string %>
   <%= form.input :period, :collection => form.object.position.schedule.periods %>
-  <%= form.input :starts_at, :as => :ft_calendar_date_select %>
-  <%= form.input :ends_at, :as => :ft_calendar_date_select %>
+  <%= form.input :starts_at, :as => :string %>
+  <%= form.input :ends_at, :as => :string %>
     <% form.object.designees.each do |designee| %>
       <%= form.semantic_fields_for :designees, designee do |designee_form| %>
-        <% designee_form.inputs do %>
+        <%= designee_form.inputs do %>
           <%= designee_form.input :committee_id, :as => :hidden %>
           <%= designee_form.input :user_name, :label => "Designee for #{designee_form.object.committee.name}",
               :as => :string %>
