Memberships and some committee functional tests pass again.

--- a/app/views/committees/_form.html.erb
+++ b/app/views/committees/_form.html.erb
@@ -1,5 +1,5 @@
   <%= render "shared/error_messages", :target => form.object %>
-  <% form.inputs do %>
+  <%= form.inputs do %>
   <%= form.input :name %>
   <%= form.input :schedule, :hint => 'On what schedule are sessions of the committee organized?' %>
   <%= form.input :requestable, :as => :radio, :label => 'Requestable?' %>
