Most functional tests pass.

--- a/app/views/enrollments/_form.html.erb
+++ b/app/views/enrollments/_form.html.erb
@@ -1,5 +1,5 @@
   <%= render "shared/error_messages", :target => form.object %>
-  <% form.inputs do %>
+  <%= form.inputs do %>
   <%= form.input :position_name, :label => 'Position', :as => :string %>
   <%= form.input :title %>
   <%= form.input :votes %>
