--- a/app/views/periods/new.html.erb
+++ b/app/views/periods/new.html.erb
@@ -1,6 +1,6 @@
 <h2>New period for <%=h @schedule %></h2>
 
-<%= semantic_form_for( :period, @period, :url => schedule_periods_path(@period.schedule) ) do |f| %>
+<%= semantic_form_for( @period, :url => schedule_periods_path(@period.schedule) ) do |f| %>
   <%= render :partial => 'form', :object => f %>
 <% end %>
 
