--- a/app/views/positions/index.html.erb
+++ b/app/views/positions/index.html.erb
@@ -2,8 +2,8 @@
 
 <%= form_for @search do |form| %>
 <p>
-  <%= form.label :name_like, 'Name' %>
-  <%= form.text_field :name_like %>
+  <%= form.label :name_contains, 'Name' %>
+  <%= form.text_field :name_contains %>
   <%= form.submit "Search" %>
 </p>
 <% end %>
