--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -1,12 +1,12 @@
   <%= render "shared/error_messages", :target => form.object %>
-  <% form.inputs do %>
+  <%= form.inputs do %>
   <%= form.input :name %>
   <%= form.input :disposition, :as => :select, :collection => Question::DISPOSITIONS,
     :hint => 'How should the question be presented to the user?' %>
   <%= form.input :content %>
   <%= form.input :global, :as => :radio %>
   <% end %>
-  <% form.inputs :name => 'Quizzes' do %>
+  <%= form.inputs :name => 'Quizzes' do %>
   <%= form.input :quizzes, :as => :check_boxes %>
   <% end %>
   <%= form.buttons %>
