--- a/app/views/requests/reject.html.erb
+++ b/app/views/requests/reject.html.erb
@@ -1,7 +1,7 @@
 <h2>Reject <%=h @request.user.name %> for <%=h @request.requestable %></h2>
 
-<%= semantic_form_for(:request, @request, :url => do_reject_request_path(@request), :html => { :method => :put } ) do |form| %>
-  <% form.inputs do %>
+<%= semantic_form_for(@request, :url => do_reject_request_path(@request), :html => { :method => :put } ) do |form| %>
+  <%= form.inputs do %>
     <%= form.input :rejected_by_authority, :as => :select, :label => 'Authority',
       :hint => 'Under which authority should rejection be made?',
       :collection => ( current_user.allowed_authorities & @request.authorities ),
