Add autocompleter for enrollments form.

--- a/app/views/enrollments/_form.html.erb
+++ b/app/views/enrollments/_form.html.erb
@@ -1,6 +1,7 @@
   <%= render "shared/error_messages", :target => form.object %>
   <%= form.inputs do %>
-  <%= form.input :position_name, :label => 'Position', :as => :string %>
+  <%= form.autcompleted_input :position_name, :label => 'Position',
+    :url => positions_path( :format => :json ) %>
   <%= form.input :title %>
   <%= form.input :votes %>
   <% end %>
