--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,11 +7,8 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
 	<meta http-equiv="Content-Language" content="en-us" />
 	<link rel="SHORTCUT ICON" href="<%= image_path('favicon.ico') %>" type="image/x-icon" />
-	<%= stylesheet_link_tag 'screen', 'formtastic', 'formtastic_changes', 'blitzer/jquery-ui.css' %>
-	<script type="text/javascript">//<![CDATA[
-	  var rails_root = "<%= Rails.root %>"
-  //]]></script>
-	<%= javascript_include_tag :defaults, 'jquery.min', 'rails', 'jquery-ui.min' %>
+	<%= stylesheet_link_tag 'screen', 'formtastic', 'formtastic_changes' %>
+	<%= javascript_include_tag :defaults %>
   <meta name="csrf-token" content="<%= form_authenticity_token %>" />
   <meta name="csrf-param" content="authenticity_token" />
 </head>
