--- a/app/views/authorities/_form.html.erb
+++ b/app/views/authorities/_form.html.erb
@@ -1,7 +1,8 @@
   <%= render "shared/error_messages", :target => form.object %>
   <%= form.inputs do %>
   <%= form.input :name %>
-  <%= form.input :committee_name, :label => 'Committee', :as => :string,
+  <%= form.autocompleted_input :committee_name, :label => 'Committee',
+    :url => committees_path( :format => :json ),
     :hint => "Specify the committee, if any, whose members should be able to read " +
     "and comment on requests under this authority." %>
   <%= form.input :join_message %>
