--- a/app/views/meetings/edit.html.erb
+++ b/app/views/meetings/edit.html.erb
@@ -1,6 +1,6 @@
 <h2>Editing meeting for <%=h @meeting.committee %></h2>
 
-<%= semantic_form_for(@meeting) do |f| %>
+<%= semantic_form_for( @meeting, :html => { :multipart => true } ) do |f| %>
   <%= render :partial => 'form', :object => f %>
 <% end %>
 
